# 12factor-app

./: .gitignore  README.md  config.ini.example  manage.py  pyproject.toml
twelve_factor_app/: asgi.py  cli.py  settings.py  urls.py  views.py  wsgi.py
twelve_factor_app/gunicorn/: conf.py  logger.py
