[tool.poetry]
name = "twelve-factor-app"
version = "0.1.0.dev1"
description = ""
authors = ["Ha Tran Viet <ha.tran@paradox.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
gunicorn = "^20.1.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
twelve-factor-app = "twelve_factor_app.cli:cli"
